--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -8,11 +8,19 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Plan du site">
-  <!--
   <Breadcrumb />
-  <Hero />
-  <Content />
-  <Contact class="my-40" showBackgroundForm={false} />
+
+  <div class="mb-[60px] 2xl:mb-20">
+    <Hero />
+  </div>
+
+  <div class="mb-[200px] 2xl:mb-20">
+    <Content />
+  </div>
+
+  <div class="mb-[150px]">
+    <Contact showBackgroundForm={false} />
+  </div>
+
   <Footer />
-  -->
 </Layout>
