much cleaner css classes to space y element

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -10,13 +10,13 @@ const urlPageTitles = new Map([
   ["nos-deux-profils", "Nos deux profils"],
   ["notre-manifeste", "Notre manifeste"],
   ["temoignages", "Témoignages"],
-  ["mentions-legles", "Mentions légales"],
+  ["mentions-legales", "Mentions légales"],
   ["plan-du-site", "Plan du site"],
   ["glossaire-ux-design", "Glossaire de l’UX design"],
 ]);
 ---
 
-<nav aria-label="Breadcrumb" class="container hidden lg:block">
+<nav aria-label="Breadcrumb" class="container">
   <ul class="text-label-small">
     <li>
       <a href="/">Accueil</a>
