--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -68,7 +68,7 @@ for (const definition of data) {
 const currentPath = new URL(Astro.url.pathname, Astro.site);
 ---
 
-<section class="mt-[60px]">
+<section>
   <div class="sticky-letters hidden sticky top-[83px] bg-surface1">
     <div class="hidden 2xl:block container">
       <Grid>
