--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -10,7 +10,7 @@ import data from "../../../../data/homepage/derriere-team-ux.yaml";
 const { block1, block2 } = data;
 ---
 
-<section class="mb-[100px] 2xl:mb-[85px]">
+<section>
   <Icon name="oval" />
 
   <div class="relative flex flex-col gap-8 pb-20 2xl:pb-[100px] bg-neutral4">
