--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -5,12 +5,8 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
 import DuoDeChoc from "../../DuoDeChoc.astro";
 ---
 
-<section class="overflow-hidden mt-[60px] 2xl:mt-[129px]">
-  <div class="container relative 2xl:pb-[137px]">
-    <BackgroundForm1
-      class="hidden lg:block absolute top-[140px] right-[-470px] z-[-1]"
-    />
-
+<section class="overflow-hidden 2xl:mb-[-165px] 2xl:pb-[165px]">
+  <div class="container">
     <Grid>
       <h1
         class="col-span-full 2xl:col-start-2 2xl:col-span-9 mb-10 2xl:mb-8 text-display-large"
@@ -36,6 +32,10 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
       </div>
       <div class="hidden 2xl:block col-start-9 col-span-3">
         <div class="relative mt-[67px]">
+          <BackgroundForm1
+            class="hidden lg:block absolute top-[-184px] right-[-580px] z-[-1]"
+          />
+
           <DuoDeChoc variant="big" />
         </div>
       </div>
