--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -11,10 +11,10 @@ const {
 } = data;
 ---
 
-<section class="overflow-hidden pt-14">
-  <div class="container relative mb-[140px] 2xl:mb-[100px]">
+<section class="overflow-hidden">
+  <div class="container relative">
     <BackgroundForm1
-      class="absolute top-[95px] left-[-600px] z-[-1] w-[1159px] h-[586px]"
+      class="hidden 2xl:block absolute z-[-1] top-[95px] left-[-600px]"
     />
 
     <Grid>
