--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -7,7 +7,7 @@ import Brush from "../../@common/Brush.astro";
 import TeamUXStamp from "../../TeamUXStamp.astro";
 ---
 
-<section class="mb-[180px] 2xl:mb-0">
+<section>
   <Icon name="oval" />
 
   <div class="bg-neutral4">
