--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -8,7 +8,7 @@ import Daniela from "../../images/Daniela.astro";
 import Profile from "./Profile.astro";
 ---
 
-<section class="container mb-[100px] 2xl:mb-[140px]">
+<section class="container">
   <Grid class="gap-y-8 2xl:gap-y-0">
     <div class="col-span-full 2xl:col-start-2 2xl:col-span-5">
       <Profile profile={dataYuna}>
