--- a/src/components/pages/notre-manifeste/Convictions.astro
+++ b/src/components/pages/notre-manifeste/Convictions.astro
@@ -4,7 +4,7 @@ import Grid from "../../@common/Grid.astro";
 import Brush from "../../@common/Brush.astro";
 ---
 
-<section class="container mb-[100px] 2xl:mb-[144px]">
+<section class="container">
   <Grid>
     <h2
       class="col-span-full 2xl:col-start-2 2xl:col-span-6 mb-10 text-headline-extra-large 2xl:text-display-small"
