--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -111,7 +111,7 @@ import SmallProject from "./SmallProject.astro";
     }
   </div>
   <div class="flex justify-center mt-10 2xl:mt-[60px]">
-    <CallToAction href="/temoignages" type="secondary" rightIcon="forward">
+    <CallToAction href="/temoignages" type="primary" rightIcon="forward">
       Découvrir les témoignages
     </CallToAction>
   </div>
