--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -7,7 +7,7 @@ import Expertise from "./Expertise.astro";
 ---
 
 <section
-  class="overflow-hidden 2xl:overflow-auto relative pt-[331px] 2xl:pt-0 mt-[-180px] 2xl:mt-0 mb-[100px] 2xl:mb-[140px]"
+  class="max-sm:overflow-hidden relative max-sm:pt-[331px] max-sm:mt-[-331px]"
 >
   <div class="container">
     <Grid>
