--- a/src/components/pages/mentions-legales/Block.astro
+++ b/src/components/pages/mentions-legales/Block.astro
@@ -7,7 +7,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<div class="p-10 bg-neutral4 rounded-[26px]">
+<div class="p-5 2xl:p-10 bg-neutral4 rounded-[26px]">
   {title && <h3 class="text-headline-small mb-5">{title}</h3>}
   <div class="block-content text-body-medium">
     <slot />
