--- a/src/components/pages/mentions-legales/Section.astro
+++ b/src/components/pages/mentions-legales/Section.astro
@@ -8,6 +8,8 @@ const { title } = Astro.props;
 ---
 
 <section>
-  <h2 class="mb-10 text-headline-large">{title}</h2>
+  <h2 class="mb-6 2xl:mb-10 text-headline-extra-large 2xl:text-headline-large">
+    {title}
+  </h2>
   <slot />
 </section>
