--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -5,10 +5,12 @@ import Brush from "../../@common/Brush.astro";
 import BackgroundForm1 from "../../BackgroundForm1.astro";
 ---
 
-<section class="overflow-hidden 2xl:mt-[-287px] 2xl:mb-[-75px]">
-  <div class="container pb-[321px] 2xl:pt-[287px] 2xl:pb-[308px]">
+<section
+  class="overflow-hidden pb-[328px] mb-[-328px] 2xl:pt-[350px] 2xl:mt-[-350px] 2xl:pb-[312px] 2xl:mb-[-312px]"
+>
+  <div class="container">
     <Grid>
-      <div class="col-span-full 2xl:col-start-2 2xl:col-span-6 mt-[68px]">
+      <div class="col-span-full 2xl:col-start-2 2xl:col-span-6">
         <div class="isolate relative">
           <Brush
             id="1"
@@ -19,7 +21,7 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
             class="absolute z-[-2] right-0 2xl:right-[-361px] top-[calc(100%-60px)] 2xl:top-[-22px] 2xl:w-[383px] 2xl:h-[381px] w-[255px] h-[254px]"
           />
           <BackgroundForm1
-            class="absolute z-[-3] right-[-405px] bottom-[-245px] 2xl:right-[-1050px] 2xl:bottom-[-160px]"
+            class="absolute z-[-3] right-[-395px] bottom-[-251px] 2xl:right-[-1060px] 2xl:bottom-[-160px]"
           />
           <div class="p-10 bg-surface7 rounded-[26px]">
             <p class="text-body-medium">
