--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -8,11 +8,19 @@ import Glossaire from "../../components/pages/glossaire-ux-design/Glossaire.astr
 ---
 
 <Layout title="Glossaire de l’UX design">
-  <Breadcrumb />
-  <Hero />
-  <Glossaire />
+  <div class="hidden lg:block lg:mb-[90px]">
+    <Breadcrumb />
+  </div>
 
-  <div class="mt-[90px] 2xl:mt-0">
+  <div class="my-[60px]">
+    <Hero />
+  </div>
+
+  <div class="mb-[200px]">
+    <Glossaire />
+  </div>
+
+  <div class="mb-[150px] 2xl:mb-[170px]">
     <Contact />
   </div>
 
