--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -8,11 +8,19 @@ import Footer from "../../components/Footer.astro";
 ---
 
 <Layout title="Projets">
-  <Breadcrumb />
-  <Hero />
-  <AllProjects />
+  <div class="hidden lg:block lg:mb-[90px]">
+    <Breadcrumb />
+  </div>
 
-  <div class="mt-[90px]">
+  <div class="max-sm:mt-[60px] mb-20 2xl:mb-[140px]">
+    <Hero />
+  </div>
+
+  <div class="mb-40 2xl:mb-[170px]">
+    <AllProjects />
+  </div>
+
+  <div class="mb-[150px] 2xl:mb-[170px]">
     <Contact />
   </div>
 
