header logo size on lg

--- a/src/components/Header/Logo.astro
+++ b/src/components/Header/Logo.astro
@@ -17,7 +17,7 @@ const htmlAttributes =
     width: 170px;
     height: 36px;
 
-    @screen md {
+    @screen lg {
       width: 189px;
       height: 40px;
     }
