--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -8,11 +8,11 @@ import Glossaire from "../../components/pages/glossaire-ux-design/Glossaire.astr
 ---
 
 <Layout title="Glossaire de l’UX design">
-  <div class="hidden lg:block lg:mb-[90px]">
+  <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
 
-  <div class="my-[60px]">
+  <div class="max-md:mt-[60px] mb-[60px]">
     <Hero />
   </div>
 
