--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -8,11 +8,11 @@ import Content from "../../components/pages/mentions-legales/Content.astro";
 ---
 
 <Layout title="Mentions légales">
-  <div class="hidden lg:block lg:mb-[90px]">
+  <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
 
-  <div class="my-[60px]">
+  <div class="max-md:mt-[60px] mb-[60px]">
     <Hero />
   </div>
 
