--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -9,10 +9,10 @@ import ItsAMatch from "../../components/pages/nos-deux-profils/ItsAMatch.astro";
 ---
 
 <Layout title="Nos 2 profils">
-  <div class="hidden lg:block lg:mb-[90px]">
+  <div class="hidden lg:block md:mb-[90px]">
     <Breadcrumb />
   </div>
-  <div class="max-sm:mt-[60px] mb-20 2xl:mb-[140px]">
+  <div class="max-md:mt-[60px] mb-20 2xl:mb-[140px]">
     <Hero />
   </div>
 
