--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -11,11 +11,11 @@ import Signature from "../../components/pages/notre-manifeste/Signature.astro";
 ---
 
 <Layout title="Notre manifeste">
-  <div class="hidden lg:block lg:mb-[90px]">
+  <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
 
-  <div class="max-sm:mt-[60px] mb-20 2xl:mb-[140px]">
+  <div class="max-md:mt-[60px] mb-20 2xl:mb-[140px]">
     <Hero />
   </div>
 
