--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -8,11 +8,11 @@ import Footer from "../../components/Footer.astro";
 ---
 
 <Layout title="Projets">
-  <div class="hidden lg:block lg:mb-[90px]">
+  <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
 
-  <div class="max-sm:mt-[60px] mb-20 2xl:mb-[140px]">
+  <div class="max-md:mt-[60px] mb-20 2xl:mb-[140px]">
     <Hero />
   </div>
 
