some adjustments on in between breakpoints

--- a/src/components/@common/Grid.astro
+++ b/src/components/@common/Grid.astro
@@ -17,10 +17,10 @@ const { as: HTMLTag = "div", class: cssClasses, ...props } = Astro.props;
     "gap-y-0",
     "gap-x-5",
     "grid-cols-6",
-    "2xl:gap-x-8",
-    "2xl:grid-cols-12",
     "px-5",
-    "2xl:px-0",
+    "lg:gap-x-8",
+    "lg:grid-cols-12",
+    "xl:px-0",
     cssClasses,
   ]}
   {...props}
