--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -5,24 +5,24 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
 import DuoDeChoc from "../../DuoDeChoc.astro";
 ---
 
-<section class="overflow-hidden 2xl:mb-[-165px] 2xl:pb-[165px]">
+<section class="overflow-hidden lg:mb-[-165px] lg:pb-[165px]">
   <div class="container">
     <Grid>
       <h1
-        class="col-span-full 2xl:col-start-2 2xl:col-span-9 mb-10 2xl:mb-8 text-display-large"
+        class="col-span-full lg:col-start-2 lg:col-span-9 mb-10 lg:mb-8 text-display-large"
       >
         Nous sommes Yuna & Daniela, un binôme de <span class="text-primary"
           >designers UX seniors en freelance</span
         >
       </h1>
-      <div class="col-span-full 2xl:col-start-2 2xl:col-span-6">
-        <p class="our-work mb-5 text-body-large 2xl:text-body-extra-large">
+      <div class="col-span-full lg:col-start-2 lg:col-span-6">
+        <p class="our-work mb-5 text-body-large lg:text-body-extra-large">
           Notre travail est reconnu pour son efficacité et sa pertinence, en
           particulier sur les produits numériques dits complexes que nous
           adorons construire ou déconstruire.
         </p>
 
-        <p class="text-body-large-bold 2xl:text-body-large mb-10">
+        <p class="text-body-large-bold lg:text-body-large mb-10">
           Nous livrons un design accessible et le plus sobre possible.
         </p>
 
@@ -30,10 +30,10 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
           Découvrir nos projets
         </CallToAction>
       </div>
-      <div class="hidden 2xl:block col-start-9 col-span-3">
+      <div class="max-lg:hidden col-start-9 col-span-3">
         <div class="relative mt-[67px]">
           <BackgroundForm1
-            class="hidden lg:block absolute top-[-184px] right-[-580px] z-[-1]"
+            class="max-2xl:hidden absolute top-[-184px] right-[-580px] z-[-1]"
           />
 
           <DuoDeChoc variant="big" />
