--- a/src/components/DuoDeChoc.astro
+++ b/src/components/DuoDeChoc.astro
@@ -11,30 +11,35 @@ const { variant } = Astro.props;
 
 {
   variant === "small" && (
-    <div class="isolate relative flex justify-center">
+    <div class="isolate relative">
       <Brush
         id="1"
         width={210}
         height={249}
         class="absolute z-0 top-0 left-0 rotate-[-90deg] translate-x-[20px] translate-y-[-20px]"
       />
-      <PictureYuna width={85} height={210} class="relative z-10 mr-3" />
-      <PictureDaniela width={85} height={210} class="relative z-10" />
+      <div class="flex justify-center gap-3">
+        <PictureYuna width={85} height={210} class="relative z-10" />
+        <PictureDaniela width={85} height={210} class="relative z-10" />
+      </div>
     </div>
   )
 }
 
 {
   variant === "big" && (
-    <div class="isolate relative flex ">
+    <div class="relative isolate">
       <Brush
         id="1"
         width={352}
         height={418}
         class="absolute z-0 top-[-30px] left-0 rotate-[-165.467deg] translate-x-[-10px]"
       />
-      <PictureYuna width={156} height={384} class="relative z-10 mr-4" />
-      <PictureDaniela width={156} height={384} class="relative z-10" />
+
+      <div class="flex gap-4">
+        <PictureYuna width={156} height={384} class="relative z-10" />
+        <PictureDaniela width={156} height={384} class="relative z-10" />
+      </div>
     </div>
   )
 }
