--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -14,38 +14,38 @@ const {
 <section class="overflow-hidden">
   <div class="container relative">
     <BackgroundForm1
-      class="hidden 2xl:block absolute z-[-1] top-[95px] left-[-600px]"
+      class="hidden lg:block absolute z-[-1] top-[95px] left-[-600px]"
     />
 
     <Grid>
       <h2
-        class="col-span-full mb-8 2xl:mb-20 text-headline-extra-large 2xl:text-display-small 2xl:text-center"
+        class="col-span-full mb-8 lg:mb-20 text-headline-extra-large lg:text-display-small lg:text-center"
       >
         {data.title}
       </h2>
     </Grid>
-    <Grid as="ul" class="gap-y-2.5 mb-10 2xl:mb-[60px]">
-      <li class="col-span-full 2xl:col-start-2 2xl:col-span-7 isolate relative">
+    <Grid as="ul" class="gap-y-2.5 mb-10 lg:mb-[60px]">
+      <li class="col-span-full lg:col-start-2 lg:col-span-7 isolate relative">
         <Brush
           id="3"
-          class="hidden 2xl:block absolute z-[-1] w-[156px] h-[145px] translate-x-[-60px] translate-y-[-60px]"
+          class="hidden lg:block absolute z-[-1] w-[156px] h-[145px] translate-x-[-60px] translate-y-[-60px]"
         />
         <Teasing content={teasing1} />
       </li>
-      <li class="col-span-full 2xl:col-start-4 2xl:col-span-4">
+      <li class="col-span-full lg:col-start-4 lg:col-span-4">
         <Teasing content={teasing2} />
       </li>
-      <li class="col-span-full 2xl:col-start-8 2xl:col-span-4 isolate relative">
+      <li class="col-span-full lg:col-start-8 lg:col-span-4 isolate relative">
         <Brush
           id="3"
-          class="hidden 2xl:block absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
+          class="hidden lg:block absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
         />
         <Teasing content={teasing3} />
       </li>
-      <li class="col-span-full 2xl:col-start-2 2xl:col-span-5">
+      <li class="col-span-full lg:col-start-2 lg:col-span-5">
         <Teasing content={teasing4} />
       </li>
-      <li class="col-span-full 2xl:col-start-7 2xl:col-span-4">
+      <li class="col-span-full lg:col-start-7 lg:col-span-4">
         <Teasing content={teasing5} />
       </li>
     </Grid>
