pages title & description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,10 @@ import Testimonials from "../components/pages/homepage/Testimonials/index.astro"
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Accueil">
+<Layout
+  title="Team UX ▷ 2 designers UX en freelance à Bordeaux"
+  decription="Nous sommes Yuna & Daniela, un binôme de designers UX seniors. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
+>
   <div class="mt-[60px] 2xl:mt-[129px] mb-[150px] 2xl:mb-[85px]">
     <Hero />
   </div>
