--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -7,7 +7,10 @@ import Hero from "../../components/pages/mentions-legales/Hero.astro";
 import Content from "../../components/pages/mentions-legales/Content.astro";
 ---
 
-<Layout title="Mentions légales">
+<Layout
+  title="Team UX - Mentions légales"
+  description="Page des mentions légales du site team-ux.com."
+>
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
