--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -8,7 +8,10 @@ import Profiles from "../../components/pages/nos-deux-profils/Profiles.astro";
 import ItsAMatch from "../../components/pages/nos-deux-profils/ItsAMatch.astro";
 ---
 
-<Layout title="Nos 2 profils">
+<Layout
+  title="Team UX - Profils d’UX designers freelances"
+  description="Nous sommes Daniela & Yuna, les 2 designers UX seniors qui forment le binôme freelance Team UX. Nous vous présentons nos profils et nos parcours respectifs."
+>
   <div class="hidden lg:block md:mb-[90px]">
     <Breadcrumb />
   </div>
