--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -7,7 +7,10 @@ import Hero from "../../components/pages/projets/Hero.astro";
 import Footer from "../../components/Footer.astro";
 ---
 
-<Layout title="Projets">
+<Layout
+  title="Team UX - Nos projets UX design"
+  description="Découvrez une sélection de nos collaborations UX. Quelques références de projets de design UX, de conception accessible et d’éco-conception."
+>
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
