--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -7,7 +7,10 @@ import Hero from "../../components/pages/glossaire-ux-design/Hero.astro";
 import Glossaire from "../../components/pages/glossaire-ux-design/Glossaire.astro";
 ---
 
-<Layout title="Glossaire de l’UX design">
+<Layout
+  title="Team UX - Glossaire de l’UX design"
+  description="Nous avons défini de nombreux termes techniques utilisés dans le domaine du design UX pour parler d’outils de design, de livrables UX ou de méthodes de travail."
+>
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
