--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -10,7 +10,10 @@ import Actions from "../../components/pages/notre-manifeste/Actions.astro";
 import Signature from "../../components/pages/notre-manifeste/Signature.astro";
 ---
 
-<Layout title="Notre manifeste">
+<Layout
+  title="Team UX - Notre manifeste"
+  description="Découvrez les convictions qui guident nos choix de conception UX et nos actions au quotidien."
+>
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
