--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -7,7 +7,7 @@ import Hero from "../../components/pages/plan-du-site/Hero.astro";
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Plan du site">
+<Layout title="Team UX - Plan du site" description="Plan du site team-ux.com.">
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
