--- a/src/pages/temoignages/index.astro
+++ b/src/pages/temoignages/index.astro
@@ -7,7 +7,10 @@ import Testimonials from "../../components/pages/temoignages/Testimonials.astro"
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Témoignages">
+<Layout
+  title="Team UX - Témoignages UX design"
+  description="Nos clientes et clients nous ont adressé de beaux témoignages suite à nos collaborations pour des projets d’UX design, de design accessible ou d’éco-conception."
+>
   <div class="hidden lg:block lg:mb-[90px]">
     <Breadcrumb />
   </div>
