breadcrumb hover underline

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -21,7 +21,7 @@ const urlPageTitles = new Map([
   <Grid>
     <ul class="col-span-full text-label-small">
       <li>
-        <a href="/">Accueil</a>
+        <a href="/" class="hover:underline underline-offset-[4px]">Accueil</a>
         <Icon name="chevron_right_breadcrumb" width={16} height={16} />
       </li>
 
