--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -25,8 +25,10 @@ const backgroundFormCSSClasses = showBackgroundForm
   : [];
 ---
 
-<section class:list={[backgroundFormCSSClasses, cssClasses]}>
-  <div id="contact" class="container scroll-mt-[50vh]">
+<section
+  class:list={[backgroundFormCSSClasses, "scroll-mt-[185px]", cssClasses]}
+>
+  <div id="contact" class="container">
     <Grid>
       <div class="col-span-full 2xl:col-start-2 2xl:col-span-8">
         <div class="relative px-5 py-10 2xl:p-14 bg-surface3 rounded-[26px]">
