project: link transparent hover

--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -112,6 +112,10 @@ const iconSize = variant === "transparent" ? 18 : 24;
 
       &.primary {
         @apply text-primary;
+
+        &:hover {
+          @apply text-secondary;
+        }
       }
 
       &.secondary {
