--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -113,12 +113,12 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
           variant="transparent"
           class="underline w-full cursor-pointer"
         >
-          <span class="closed flex gap-1.5 ">
+          <span class="closed flex items-center gap-1.5 ">
             Afficher la galerie de ce projet
             <Icon name="visibility" width={22} height={22} />
           </span>
 
-          <span class="opened flex gap-1.5">
+          <span class="opened flex items-center gap-1.5">
             Fermer la galerie
             <Icon name="cross" width={18} height={18} />
           </span>
@@ -158,7 +158,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
               <Icon name="photo_prints" width={24} height={24} />
             </span>
             <p class="text-neutral1 text-body-small">
-              Dans une <a href="/demarche-eco-conception" class="text-primary underline underline-offset-[4px]">démarche d’éco-responsabilité</a>, nous vous proposons de
+              Dans une <a href="/demarche-eco-conception" class="text-primary underline underline-offset-[4px] hover:text-secondary">démarche d’éco-responsabilité</a>, nous vous proposons de
               n’ouvrir
               <br />
               que les galeries et visuels dont vous avez besoin.
