projet: image dont catch focus

--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -136,7 +136,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
                     target="_blank"
                     class="project-image-link relative flex overflow-hidden rounded-md lg:rounded-lg"
                   >
-                    <CallToAction class="opacity-0 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2" type="secondary" rightIcon="open_in_new">
+                    <CallToAction tabindex="-1" class="opacity-0 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2" type="secondary" rightIcon="open_in_new">
                       Ouvrir l'image
                     </CallToAction>
 
