homepage: teasing gap y

--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -24,7 +24,7 @@ const {
         {data.title}
       </h2>
     </Grid>
-    <Grid as="ul" class="gap-y-2.5 mb-10 lg:mb-[60px]">
+    <Grid as="ul" class="gap-y-2.5 lg:gap-y-5 mb-10 lg:mb-[60px]">
       <li class="col-span-full lg:col-start-2 lg:col-span-7 isolate relative">
         <Brush
           id="3"
