--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -95,7 +95,11 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["/images/IDF.png"]}
+                  srcSet={[
+                    "/images/certifications/IDF.png",
+                    "/images/certifications/IDF.avif",
+                    "/images/certifications/IDF.webp",
+                  ]}
                   alt=""
                   width={170}
                   height={56}
