--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -49,7 +49,7 @@ const {
         <Teasing content={teasing5} />
       </li>
     </Grid>
-    <div class="flex">
+    <div class="flex mb-1.5">
       <CallToAction href="/projets" class="mx-auto" rightIcon="forward">
         {data.callToAction.label}
       </CallToAction>
